NetBSD Problem Report #54267

From martin@duskware.de  Mon Jun  3 14:21:15 2019
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 8751D7A15D
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  3 Jun 2019 14:21:15 +0000 (UTC)
Message-Id: <20190603142106.BA1E05CC7A5@emmas.aprisoft.de>
Date: Mon,  3 Jun 2019 16:21:06 +0200 (CEST)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: crash on sk0 attach in mutex_enter
X-Send-Pr-Version: 3.95

>Number:         54267
>Category:       kern
>Synopsis:       crash on sk0 attach in mutex_enter
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    msaitoh
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jun 03 14:25:00 +0000 2019
>Closed-Date:    Mon Jun 03 16:57:25 +0000 2019
>Last-Modified:  Mon Jun 03 16:57:25 +0000 2019
>Originator:     Martin Husemann
>Release:        NetBSD 8.99.42
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD night-owl.duskware.de 8.99.42 NetBSD 8.99.42 (NIGHT-OWL) #672: Fri May 31 18:12:54 CEST 2019 martin@night-owl.duskware.de:/usr/src/sys/arch/amd64/compile/NIGHT-OWL amd64
Architecture: x86_64
Machine: amd64
>Description:

When booting a machine with sk0 I get a crash like this:

mutex_enter()
sk_init_yukon()
sk_attach()
config_attach_loc()

Maybe the mutex is not yet initialized?

>How-To-Repeat:
s/a

>Fix:
n/a

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->msaitoh
Responsible-Changed-By: msaitoh@NetBSD.org
Responsible-Changed-When: Mon, 03 Jun 2019 14:51:48 +0000
Responsible-Changed-Why:
mine.


From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54267 CVS commit: src/sys/dev/pci
Date: Mon, 3 Jun 2019 15:39:35 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Mon Jun  3 15:39:35 UTC 2019

 Modified Files:
 	src/sys/dev/pci: if_sk.c

 Log Message:
  Make new sk_unreset_{xmac,yukon}() and use them in sk_attach().
 Fixes PR kern/54267 reported by martin.


 To generate a diff of this commit:
 cvs rdiff -u -r1.98 -r1.99 src/sys/dev/pci/if_sk.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: SAITOH Masanobu <msaitoh@execsw.org>
To: gnats-bugs@netbsd.org, kern-bug-people@netbsd.org,
 gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Cc: msaitoh@execsw.org
Subject: Re: kern/54267: crash on sk0 attach in mutex_enter
Date: Tue, 4 Jun 2019 00:40:39 +0900

 On 2019/06/03 23:25, martin@NetBSD.org wrote:
 >> Number:         54267
 >> Category:       kern
 >> Synopsis:       crash on sk0 attach in mutex_enter
 >> Confidential:   no
 >> Severity:       critical
 >> Priority:       high
 >> Responsible:    kern-bug-people
 >> State:          open
 >> Class:          sw-bug
 >> Submitter-Id:   net
 >> Arrival-Date:   Mon Jun 03 14:25:00 +0000 2019
 >> Originator:     Martin Husemann
 >> Release:        NetBSD 8.99.42
 >> Organization:
 > The NetBSD Foundation, Inc.
 >> Environment:
 > System: NetBSD night-owl.duskware.de 8.99.42 NetBSD 8.99.42 (NIGHT-OWL) #672: Fri May 31 18:12:54 CEST 2019 martin@night-owl.duskware.de:/usr/src/sys/arch/amd64/compile/NIGHT-OWL amd64
 > Architecture: x86_64
 > Machine: amd64
 >> Description:
 > 
 > When booting a machine with sk0 I get a crash like this:
 > 
 > mutex_enter()
 > sk_init_yukon()
 > sk_attach()
 > config_attach_loc()
 > 
 > Maybe the mutex is not yet initialized?
 > 
 >> How-To-Repeat:
 > s/a
 > 
 >> Fix:
 > n/a
 > 

 Please test if_sk.c rev. 1.98.

 -- 
 -----------------------------------------------
                 SAITOH Masanobu (msaitoh@execsw.org
                                  msaitoh@netbsd.org)

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Mon, 03 Jun 2019 16:57:25 +0000
State-Changed-Why:
Works, thanks for quick fix!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.