 Make new sk_unreset_{xmac,yukon}() and use them in sk_attach(). Fixes PR kern/54267 reported by martin.